refactor: [BE] railway 배포 준비 수정